--- a/po/it.po
+++ b/po/it.po
@@ -2608,7 +2608,6 @@ msgstr "Percorso predefinito delle registrazioni"
 msgid "Default settings"
 msgstr "Impostazioni predefinite"
 
-#, fuzzy
 msgid "Default timer type"
 msgstr "Tipo di timer predefinito"
 
@@ -8049,7 +8048,7 @@ msgid "Show menu or plugin numbers"
 msgstr "Mostrare i numeri al menu e plugin"
 
 msgid "Choice picons folder"
-msgstr "Scegli il perorso picons"
+msgstr "Scegli il percorso picons"
 
 msgid "This option allows you to configure the path of the picons that will be displayed in the channel selection list. But also where they will be downloaded from the download."
 msgstr "Questa opzione consente di configurare il percorso dei picons che verranno visualizzati nell'elenco di selezione dei canali. Ma anche dove verranno scaricati dal download."
@@ -8105,7 +8104,6 @@ msgstr "Mostrare l'indicatore di registrazione"
 msgid "Show satellites list"
 msgstr "Mostrare la lista satelliti"
 
-#, fuzzy
 msgid "Show screen path"
 msgstr "Mostra il percorso dello schermo"
 
@@ -10264,7 +10262,6 @@ msgstr "Riattivare il ricevitore dalla sospensione"
 msgid "Wakeup TV from standby"
 msgstr "Riattivare la TV dalla sospensione"
 
-#, fuzzy
 msgid "Wakeup command for TV"
 msgstr "Segnale di riattivazione dalla TV"
 
